@@ -1,2 +1,1 @@
 /usr/lib/python*
-usr/etc/neutron/fwaas_driver.ini	/etc/neutron
