@@ -8,6 +8,7 @@ neutron-fwaas (1:8.0.0-1) unstable; urgency=medium
   * New upstream release.
   * Fixed (build-)depends for this release.
   * Standards-Version: 3.9.7 (no change).
+  * Now generating the config file.
 
  -- Thomas Goirand <zigo@debian.org>  Thu, 07 Apr 2016 23:08:05 +0200
 
